--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   </head>
   <body>
     <div class="container">
-      <!-- First Row -->
+        <h1>Esercizio per casa</h1>
+      <!-- 1° Row -->
       <div class="row">
         <div class="col-xs-1 box flex-centered-item">1 col</div>
         <div class="col-xs-1 box flex-centered-item">1 col</div>
@@ -25,12 +26,146 @@
         <div class="col-xs-1 box flex-centered-item">1 col</div>
         <div class="col-xs-1 box flex-centered-item">1 col</div>
       </div>
-      <!-- Second Row -->
+      <!-- 2° Row -->
       <div class="row">
-        <div class="col-xs-2 box flex-centered-item">1 col</div>
-        <div class="col-xs-5 box flex-centered-item">1 col</div>
-        <div class="col-xs-5 box flex-centered-item">1 col</div>
+        <div class="col-xs-2 box flex-centered-item">2 col</div>
+        <div class="col-xs-5 box flex-centered-item">5 col</div>
+        <div class="col-xs-5 box flex-centered-item">5 col</div>
       </div>
+      <!-- 3° Row -->
+      <div class="row">
+        <div class="col-xs-12 box flex-centered-item">12 col</div>
+      </div>
+      <!-- 4° Row -->
+      <div class="row">
+        <div class="col-xs-8 box flex-centered-item">8 cols</div>
+        <div class="col-xs-2 box flex-centered-item">2 col</div>
+        <div class="col-xs-2 box flex-centered-item">2 col</div>
+      </div>
+      <!-- 5° Row -->
+      <div class="row">
+        <div class="col-xs-1 box flex-centered-item">8 cols</div>
+        <div class="col-xs-2 box flex-centered-item">2 col</div>
+        <div class="col-xs-2 box flex-centered-item">2 col</div>
+        <div class="col-xs-6 box flex-centered-item">6 col</div>
+        <div class="col-xs-1 box flex-centered-item">1 col</div>
+      </div>
+      <!-- 6° Row -->
+      <div class="row">
+        <div class="col-xs-6 box padding">
+          <div class="row">
+            <div class="col-xs-2 box-green flex-centered-item">
+              Nested 2 col
+            </div>
+            <div class="col-xs-2 box-green flex-centered-item">
+              Nested 2 col
+            </div>
+            <div class="col-xs-8 box-green flex-centered-item">
+              Nested 
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-6 box padding">
+          <div class="row flex-centered-item">
+            <div class="col-xs-6 box-green flex-centered-item">
+              Nested 6 col
+            </div>
+            <div class="col-xs-6 box-green flex-centered-item">
+              Nested 6 col
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- breakline -->
+      <br />
+      <!-- breakline -->
+      <!-- 7° Row -->
+      <div class="row">
+        <div class="col-xs-12 box"></div>
+      </div>
+      <!-- 8° Row -->
+      <div class="row">
+        <div class="col-xs-2 box "></div>
+        <div class="col-xs-10 box "></div>
+      </div>
+      <!-- 9° Row -->
+      <div class="row">
+        <div class="col-xs-3 box "></div>
+        <div class="col-xs-9 box "></div>
+      </div>
+      <!-- 10° Row -->
+      <div class="row">
+        <div class="col-xs-4 box "></div>
+        <div class="col-xs-8 box "></div>
+      </div>
+      <!-- 11° Row -->
+      <div class="row">
+        <div class="col-xs-5 box "></div>
+        <div class="col-xs-7 box "></div>
+      </div>
+      <!-- 12° Row -->
+      <div class="row">
+        <div class="col-xs-6 box "></div>
+        <div class="col-xs-6 box "></div>
+      </div>
+      <!-- Offset part -->
+      <h1>Offset</h1>
+       <!-- 12° Row -->
+       <div class="row">
+        <div class="col-xs-offset-11"></div>
+        <div class="col-xs-1 box "></div>
+      </div>
+       <!-- 12° Row -->
+       <div class="row">
+        <div class="col-xs-offset-10"></div>
+        <div class="col-xs-2 box "></div>
+      </div>
+       <!-- 12° Row -->
+       <div class="row">
+        <div class="col-xs-offset-9"></div>
+        <div class="col-xs-3 box "></div>
+      </div>
+       <!-- 12° Row -->
+       <div class="row">
+        <div class="col-xs-offset-8"></div>
+        <div class="col-xs-4 box "></div>
+      </div>
+       <!-- 12° Row -->
+       <div class="row">
+        <div class="col-xs-offset-7"></div>
+        <div class="col-xs-5 box "></div>
+      </div>
+       <!-- 12° Row -->
+       <div class="row">
+        <div class="col-xs-offset-6"></div>
+        <div class="col-xs-6 box "></div>
+      </div>
+       <!-- 12° Row -->
+       <div class="row">
+        <div class="col-xs-offset-5"></div>
+        <div class="col-xs-7 box "></div>
+      </div>
+       <!-- 12° Row -->
+       <div class="row">
+        <div class="col-xs-offset-4"></div>
+        <div class="col-xs-8 box "></div>
+      </div>
+       <!-- 12° Row -->
+       <div class="row">
+        <div class="col-xs-offset-3"></div>
+        <div class="col-xs-9 box "></div>
+      </div>
+       <!-- 12° Row -->
+       <div class="row">
+        <div class="col-xs-offset-2"></div>
+        <div class="col-xs-10 box "></div>
+      </div>
+       <!-- 12° Row -->
+       <div class="row">
+        <div class="col-xs-offset-1"></div>
+        <div class="col-xs-11 box "></div>
+      </div>
+
     </div>
   </body>
 </html>
