Correzione con Ottavio

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
       <!-- 6° Row -->
       <div class="row">
-        <div class="col-xs-6 box padding">
+        <div class="col-xs-6 box">
           <div class="row">
             <div class="col-xs-2 box-green flex-centered-item">
               Nested 2 col
@@ -61,11 +61,11 @@
               Nested 2 col
             </div>
             <div class="col-xs-8 box-green flex-centered-item">
-              Nested 
+              Nested 8 col
             </div>
           </div>
         </div>
-        <div class="col-xs-6 box padding">
+        <div class="col-xs-6 box">
           <div class="row flex-centered-item">
             <div class="col-xs-6 box-green flex-centered-item">
               Nested 6 col
