--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </div>
         </div>
         <div class="col-xs-6 box">
-          <div class="row flex-centered-item">
+          <div class="row">
             <div class="col-xs-6 box-green flex-centered-item">
               Nested 6 col
             </div>
